fixing nav z-index

--- a/src/Assets/scss/nav.scss
+++ b/src/Assets/scss/nav.scss
@@ -65,6 +65,7 @@
 .bm-cross-button {
   height: 24px;
   width: 24px;
+  z-index: 99;
 }
 
 .bm-cross {
@@ -93,6 +94,7 @@
   top: 0;
   height: 100px;
   width: 100%;
+  z-index: 99;
 
   img {
     width: 65px;
